[package]
name = "repostats"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "repostats"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
dirs = "5.0"
